// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Position can render a disable select 1`] = `
<label id="positionField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="position"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      What’s your job position?
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="position"
            name="position"
            data-trackable="field-position"
            aria-required="true"
            required
            disabled
    >
      <option value>
        Please select a job position
      </option>
      <option value="AN">
        Analyst
      </option>
      <option value="AS">
        Associate
      </option>
      <option value="BR">
        Broker/Trader/Advisor
      </option>
      <option value="BU">
        Business School Academic
      </option>
      <option value="CP">
        CEO/president/Chairman
      </option>
      <option value="CS">
        Consultant
      </option>
      <option value="DT">
        Diplomat/Sen Govt Officer
      </option>
      <option value="OE">
        Exec Mgmt (EVP/SVP/MD)
      </option>
      <option value="GI">
        Gov&#x27;t/Int&#x27;l org official
      </option>
      <option value="MB">
        MBA Student
      </option>
      <option value="MA">
        Manager/Supervisor
      </option>
      <option value="OT">
        Other
      </option>
      <option value="MD">
        Other C Level (CFO/COO/CIO/CMO)
      </option>
      <option value="OP">
        Owner/Partner/Proprietor
      </option>
      <option value="PO">
        Politician/Government Minister
      </option>
      <option value="PR">
        Professional
      </option>
      <option value="PM">
        Programme/Project Manager
      </option>
      <option value="SE">
        Secretary/Treasurer
      </option>
      <option value="SM">
        Senior Manager/Dept Head
      </option>
      <option value="TS">
        Technical/Business Specialist
      </option>
      <option value="DH">
        VP/Director
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your position
    </span>
  </span>
</label>
`;

exports[`Position can render an error message 1`] = `
<label id="positionField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="position"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      What’s your job position?
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select o-forms-input--invalid">
    <select id="position"
            name="position"
            data-trackable="field-position"
            aria-required="true"
            required
    >
      <option value>
        Please select a job position
      </option>
      <option value="AN">
        Analyst
      </option>
      <option value="AS">
        Associate
      </option>
      <option value="BR">
        Broker/Trader/Advisor
      </option>
      <option value="BU">
        Business School Academic
      </option>
      <option value="CP">
        CEO/president/Chairman
      </option>
      <option value="CS">
        Consultant
      </option>
      <option value="DT">
        Diplomat/Sen Govt Officer
      </option>
      <option value="OE">
        Exec Mgmt (EVP/SVP/MD)
      </option>
      <option value="GI">
        Gov&#x27;t/Int&#x27;l org official
      </option>
      <option value="MB">
        MBA Student
      </option>
      <option value="MA">
        Manager/Supervisor
      </option>
      <option value="OT">
        Other
      </option>
      <option value="MD">
        Other C Level (CFO/COO/CIO/CMO)
      </option>
      <option value="OP">
        Owner/Partner/Proprietor
      </option>
      <option value="PO">
        Politician/Government Minister
      </option>
      <option value="PR">
        Professional
      </option>
      <option value="PM">
        Programme/Project Manager
      </option>
      <option value="SE">
        Secretary/Treasurer
      </option>
      <option value="SM">
        Senior Manager/Dept Head
      </option>
      <option value="TS">
        Technical/Business Specialist
      </option>
      <option value="DH">
        VP/Director
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your position
    </span>
  </span>
</label>
`;

exports[`Position can render an initial selected value 1`] = `
<label id="positionField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="position"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      What’s your job position?
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="position"
            name="position"
            data-trackable="field-position"
            aria-required="true"
            required
    >
      <option value>
        Please select a job position
      </option>
      <option value="AN">
        Analyst
      </option>
      <option value="AS">
        Associate
      </option>
      <option value="BR">
        Broker/Trader/Advisor
      </option>
      <option value="BU">
        Business School Academic
      </option>
      <option selected
              value="CP"
      >
        CEO/president/Chairman
      </option>
      <option value="CS">
        Consultant
      </option>
      <option value="DT">
        Diplomat/Sen Govt Officer
      </option>
      <option value="OE">
        Exec Mgmt (EVP/SVP/MD)
      </option>
      <option value="GI">
        Gov&#x27;t/Int&#x27;l org official
      </option>
      <option value="MB">
        MBA Student
      </option>
      <option value="MA">
        Manager/Supervisor
      </option>
      <option value="OT">
        Other
      </option>
      <option value="MD">
        Other C Level (CFO/COO/CIO/CMO)
      </option>
      <option value="OP">
        Owner/Partner/Proprietor
      </option>
      <option value="PO">
        Politician/Government Minister
      </option>
      <option value="PR">
        Professional
      </option>
      <option value="PM">
        Programme/Project Manager
      </option>
      <option value="SE">
        Secretary/Treasurer
      </option>
      <option value="SM">
        Senior Manager/Dept Head
      </option>
      <option value="TS">
        Technical/Business Specialist
      </option>
      <option value="DH">
        VP/Director
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your position
    </span>
  </span>
</label>
`;

exports[`Position render a select with a label 1`] = `
<label id="positionField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="position"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      What’s your job position?
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="position"
            name="position"
            data-trackable="field-position"
            aria-required="true"
            required
    >
      <option value>
        Please select a job position
      </option>
      <option value="AN">
        Analyst
      </option>
      <option value="AS">
        Associate
      </option>
      <option value="BR">
        Broker/Trader/Advisor
      </option>
      <option value="BU">
        Business School Academic
      </option>
      <option value="CP">
        CEO/president/Chairman
      </option>
      <option value="CS">
        Consultant
      </option>
      <option value="DT">
        Diplomat/Sen Govt Officer
      </option>
      <option value="OE">
        Exec Mgmt (EVP/SVP/MD)
      </option>
      <option value="GI">
        Gov&#x27;t/Int&#x27;l org official
      </option>
      <option value="MB">
        MBA Student
      </option>
      <option value="MA">
        Manager/Supervisor
      </option>
      <option value="OT">
        Other
      </option>
      <option value="MD">
        Other C Level (CFO/COO/CIO/CMO)
      </option>
      <option value="OP">
        Owner/Partner/Proprietor
      </option>
      <option value="PO">
        Politician/Government Minister
      </option>
      <option value="PR">
        Professional
      </option>
      <option value="PM">
        Programme/Project Manager
      </option>
      <option value="SE">
        Secretary/Treasurer
      </option>
      <option value="SM">
        Senior Manager/Dept Head
      </option>
      <option value="TS">
        Technical/Business Specialist
      </option>
      <option value="DH">
        VP/Director
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your position
    </span>
  </span>
</label>
`;
